login and sinup ui done

--- a/HealthBot/Bot/templates/landingscreen.html
+++ b/HealthBot/Bot/templates/landingscreen.html
@@ -12,7 +12,7 @@
         src="https://kit.fontawesome.com/64d58efce2.js"
         crossorigin="anonymous"
         ></script>
-        <title>Octahacks 3.0</title>
+        <title>Health Bot</title>
     </head>
     <body>
         <!--===== HEADER =====-->
@@ -32,7 +32,6 @@
                     </div>
 
                     <ul class="nav__list">
-                        <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#" class="nav__link active">About</a></li>
                         <li class="nav__item"><a href="/login" class="nav__link active">Login</a></li>
                         <li class="nav__item"><a href="#" class="nav__link active">Contact</a></li>
