--- a/HealthBot/Bot/templates/login.html
+++ b/HealthBot/Bot/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Animated Login Form</title>
+	<title>Health Bot</title>
 	<link rel="stylesheet" type="text/css" href="./../static/Login/auth.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
