--- a/HealthBot/Bot/templates/register.html
+++ b/HealthBot/Bot/templates/register.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<img class="wave" src="./../static/Login/imgs/wave.png">
+	<div class="loginerror" >{{ error }}</div>
 	<div class="container">
 		<div class="img">
 			<img src="./../static/Login/imgs/undraw_Access_account_re_8spm.svg">
@@ -16,25 +17,25 @@
 		<div class="login-content">
 			<form method="POST" action="">
 				{% csrf_token %}
+				
 				<img src="./../static/Login/imgs/undraw_profile_pic_ic5t.svg">
 				<h3 class="title">LET'S GET YOU ONBOARD</h3>
            		<div class="input-field">
 					
 					{{ userform.username.errors }}
 					<i class="fas fa-user"></i>
-							{{ userform.username }}
+					<input type="text" placeholder="Username" name="username" maxlength="150" required id="id_username">
 							 
 							  
            		</div>
            		<div class="input-field"> 
 					<i class="fas fa-envelope"></i>
 					   {{ userform.email.errors }}
-	
-						   {{ userform.email }}
+					   <input placeholder="Email" type="email" name="email" maxlength="254" id="id_email">
            		</div>
                 <div class="input-field"> 
 					<i class="fas fa-lock"></i>
-						{{ userform.password }}
+					<input type="password" placeholder="Password" name="password" maxlength="128" required id="id_password">
 					{{ userform.password.errors }}
 					
             	</div>
@@ -46,5 +47,16 @@
 	<script type="text/javascript" src="./../static/Login/main.js"></script>
 	
 	
+	<style>
+		.loginerror{
+			display: flex;
+			justify-content: center;
+			background-color:#3498DB;
+			color: white !important;
+			font-size: 20px;
+			font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+			padding: 5px 0px;
+		}
+	</style>
 </body>
 </html>
